--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Mega Craft - Site Oficial</title>
 	<meta name="description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
-	<meta name="keywords" content="MegaCraft, MegaCraft.com.br, Minecraft Server, Minecraft, Fun, Play, Info, Website, Official">
+	<meta name="keywords" content="MegaCraft, MegaCraft.com.br, Minecraft Server, Minecraft, Game, Fun, Play, Info, Website, Oficial">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="Mega Craft - Site Oficial">
 	<meta property="og:site_name" content="Mega Craft">
@@ -25,14 +25,14 @@
 				<div class="logo">
 					<!-- In the img folder, upload your logo. -->
 					<!-- Make sure to name it 'logo.png'! -->
-					<a href="/"><img src="img/logo.png" alt="MyServer logo"></a>
+					<a href="/"><img src="img/logo.png" alt="MegaCraft"></a>
 				</div>
 
 				<ul class="nav">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="https://discord.megacraft.com.br" target="_blank">Discord</a></li>
 					<li><a href="https://loja.megacraft.com.br" target="_blank">Loja</a></li>
-					<li><a href="./staff.html">Staff</a></li>
+					<li><a href="./staff.html">Equipe</a></li>
 				</ul>
 		</div>
 			<h1 class="animate">Bem vindo ao servidor MegaCraft!</h1>
@@ -44,7 +44,7 @@
 		</header>
 		<div class="main-content">
 			<h2>Sobre nós</h2>
-			<p class="about-text">Venha jogar minecraft no modo sobrevivência com vários outros jogadores! Sobreviva, desafie, faça épicas construções e muito mais!<br />
+			<p class="about-text">Venha jogar minecraft no modo sobrevivência com vários outros jogadores! Sobreviva, desafie outros jogadores, faça épicas construções e muito mais!<br />
 			Jogue um modo sobrevivência como você nunca viu antes! Nós estamos mudando a cada dia para trazer o melhor para nossos jogadores.
 			Junte-se a nós! :)<br><br>Você pode entrar em nosso servidor com o IP <b><span class="ip">jogar.megacraft.com.br</span></b></p>
 		</div>
@@ -70,24 +70,31 @@
 			<p>Por favor, considere votar no nosso Servidor usando os links abaixo! Isso nos ajuda enormemente!</p>
 			<div class="vote-container">
 				<div class="vote">
-					<h2>PlanetMinecraft.com</h2>
-					<a href="#"><button class="vote-btn">Vote Now</button></a>
-				</div>
-				<div class="vote">
-					<h2>MinecraftServers.org</h2>
-					<a href="#"><button class="vote-btn">Vote Now</button></a>
+					<h2>MinecraftServers.net</h2>
+					<a href="https://bit.ly/votarmc1" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
 					<h2>TopG.org</h2>
-					<a href="#"><button class="vote-btn">Vote Now</button></a>
+					<a href="https://bit.ly/votarmc5" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
 					<h2>Minecraft-MP.com</h2>
-					<a href="#"><button class="vote-btn">Vote Now</button></a>
+					<a href="https://bit.ly/votarmc3" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+				</div>
+				<div class="vote">
+					<h2>Minecraft-MP.com</h2>
+					<a href="https://bit.ly/votarmc2"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+				</div>
+				<div class="vote">
+					<h2>TopMinecraftServers.org</h2>
+					<a href="https://bit.ly/votarmc4"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+				</div>
+				<div class="vote">
+					<h2>McCommunity.net</h2>
+					<a href="https://bit.ly/votarmc6"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 			</div>
 		</div>
-
 		<footer>
 			<p>Copyright &copy; MegaCraft 2020</p>
 			<!-- Remove this part below if you want! -->
