--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="https://discord.megacraft.com.br" target="_blank">Discord</a></li>
 					<li><a href="https://loja.megacraft.com.br" target="_blank">Loja</a></li>
-					<li><a href="./staff.html">Equipe</a></li>
+					<li><a href="#">Equipe</a></li>
 				</ul>
 		</div>
 			<h1 class="animate">Bem vindo ao servidor MegaCraft!</h1>
