--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
 		<div class="gradient">
 			<div class="flex-container">
 				<div class="split">
-					<a href="#"><img class="img" src="img/forums.png" alt="Image of Forums icon"></a>
+					<a href="https://discord.megacraft.com.br" target="_blank"><img class="img" src="img/forums.png" alt="Image of Forums icon"></a>
 					<p>Entre para o nosso servidor do discord, tire as suas dúvidas, reporte bugs, veja as novidades, faça amigos, crie equipes, bata um papo com a galera e muito mais outras coisas, te esperamos!</p>
 				</div>
 				<div class="split">
-					<a href="#"><img class="img" src="img/store.png" alt="Image of Store icon"></a>
+					<a href="https://loja.megacraft.com.br" target="_blank"><img class="img" src="img/store.png" alt="Image of Store icon"></a>
 					<p>Aqui você pode doar para o servidor e em troca receber diversas recompensas como ranks, itens e outros benefícios. Sua ajuda é muito importante pois faz com que o servidor se mantenha online!</p>
 				</div>
 				<div class="split">
 					<a href="#vote-section"><img class="img" src="img/vote.png" alt="Image of Voting icon"></a>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a tincidunt lorem. Donec a mollis diam, posuere venenatis lorem. Vestibulum sit amet risus eros. Vote for us below!</p>
+					<p>Vote no servidor, leva somente uns minutinhos, ao votar você ajuda enormemente o servidor a crescer e ter mais jogadores, pois para mantermos o servidor online temos altos custos de manutenção.</p>
 				</div>
 			</div>
 		</div>
