--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				</div>
 				<div class="split">
 					<a href="#vote-section"><img class="img" src="img/vote.png" alt="Image of Voting icon"></a>
-					<p>Vote no servidor, leva somente uns minutinhos, ao votar você ajuda enormemente o servidor a crescer e ter mais jogadores, pois para mantermos o servidor online temos altos custos de manutenção.</p>
+					<p>Vote no servidor, leva somente uns minutinhos, ao votar você ajuda muito o servidor a crescer e ter mais jogadores, pois para mantermos o servidor online temos altos custos de manutenção.</p>
 				</div>
 			</div>
 		</div>
