--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				</div>
 
 				<ul class="nav">
-					<li><a href="index.html">Home</a></li>
+					<li><a href="/">Home</a></li>
 					<li><a href="https://discord.megacraft.com.br" target="_blank">Discord</a></li>
 					<li><a href="https://loja.megacraft.com.br" target="_blank">Loja</a></li>
 					<li><a href="#">Equipe</a></li>
@@ -66,7 +66,7 @@
 		</div>
 
 		<div class="vote-section">
-			<h2>Vote em nós</h2>
+			<h2 id="vote-section">Vote em nós</h2>
 			<p>Por favor, considere votar no nosso Servidor usando os links abaixo! Isso nos ajuda enormemente!</p>
 			<div class="vote-container">
 				<div class="vote">
