Update and rename staff.html to equipe.html

--- a/equipe.html
+++ b/equipe.html
@@ -25,10 +25,10 @@
 				</div>
 
 				<ul class="nav">
-					<li><a href="index.html">Home</a></li>
+					<li><a href="/">Home</a></li>
 					<li><a href="https://discord.megacraft.com.br" target="_blank">Discord</a></li>
 					<li><a href="https://loja.megacraft.com.br" target="_blank">Loja</a></li>
-					<li><a href="./staff.html">Staff</a></li>
+					<li><a href="equipe.html">Staff</a></li>
 				</ul>
 			</div>
 		</header>
