--- a/equipe.html
+++ b/equipe.html
@@ -36,8 +36,8 @@
 		<div class="main-content">
 			<div class="about-staff">
 				<div class="abt-epr">
-					<h1 class="fade">The Staff Team</h1>
-					<p>The staff team of MyServer is experienced, professional, and here to give you the best experience on our server. The two owners are BlexieKing and Bae4lyfe; they're dedicated to giving you the best time on the server as possible. The owners work closely with the rest of the staff team. You'll see us online and can join with the IP "play.myserver.net".</p>
+					<h1 class="fade">Nossa Equipe</h1>
+					<p>A equipe do MegaCraft é profissional, e aqui para lhe dar a melhor experiência em nosso servidor. O dono é HARDTEKBRS (TEKCRAFT); eles se dedicam a oferecer a você o melhor tempo possível no servidor. O proprietário trabalha em estreita colaboração com o resto da equipe de funcionários. Você vai nos ver online e pode entrar com o IP "jogar.megacraft.com.br".</p>
 				</div>
 				<div class="prev-epr">
 					<h2>Our Skills</h2>
