--- a/equipe.html
+++ b/equipe.html
@@ -1,13 +1,15 @@
-<!-- Proudly created by BlexieKing -->
-<!-- https://www.spigotmc.org/members/blexieking.168027 -->
-
-<!DOCTYPE html>
 <html>
 <head>
-	<title>MyServer - Staff Page</title>
-	<meta name="description" content="MyServer staff.">
-	<meta name="keywords" content="MyServer, MyServer.com, Minecraft Server, Minecraft, Fun, Play, Info, Website, Official">
+	<title>Mega Craft - Equipe</title>
+	<meta name="description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
+	<meta name="keywords" content="MegaCraft, MegaCraft.com.br, Minecraft Server, Minecraft, Game, Fun, Play, Info, Website, Oficial">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="og:title" content="Mega Craft - Site Oficial">
+	<meta property="og:site_name" content="Mega Craft">
+	<meta property="og:description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
+	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
+	<meta property="og:url" content="https://bybilly.uk/">
+	<meta name="twitter:card" content="summary_large_image">
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link rel="stylesheet" href="css/stylesheet.css">
@@ -40,24 +42,24 @@
 					<p>A equipe do MegaCraft é profissional, e aqui para lhe dar a melhor experiência em nosso servidor. O dono é HARDTEKBRS (TEKCRAFT); eles se dedicam a oferecer a você o melhor tempo possível no servidor. O proprietário trabalha em estreita colaboração com o resto da equipe de funcionários. Você vai nos ver online e pode entrar com o IP "jogar.megacraft.com.br".</p>
 				</div>
 				<div class="prev-epr">
-					<h2>Our Skills</h2>
+					<h2>Nossas Habilidades</h2>
 
 					<div class="meter-container">
-						<p>Staff Management</p>
+						<p>Gerenciamento de equipe</p>
 						<div class="meter ma">
 							<div class="skills">78%</div>
 						</div>
 					</div>
 					<div class="meter-container">
-						<p>Java Development</p>
+						<p>Desenvolvimento Java</p>
 						<div class="meter mb">
 							<div class="skills">96%</div>
 						</div>
 					</div>
 					<div class="meter-container">
-						<p>Web Development</p>
+						<p>Desenvolvimento Web</p>
 						<div class="meter mc">
-							<div class="skills">98%</div>
+							<div class="skills">100%</div>
 						</div>
 					</div>
 
@@ -65,12 +67,12 @@
 			</div>
 		</div>
 			<div class="staff">
-				<h2>Our Team</h2>
+				<h2>Nosso Time</h2>
 				<div class="staff-team">
 					<div>
-						<h3>BlexieKing</h3>
+						<h3>HARDTEKBRS</h3>
 						<div class="owner">Owner</div>
-						<img src="img/blexieking.png">
+						<img src="https://lh3.googleusercontent.com/9r8aOat2c-gUQpPqAPmoysr4ZMUjuO00WbF2d2xXcOJv--85FONrgSKvmtoRYr5OCwMl6M8fkS6DcDVJLM04Eg=s400">
 					</div>
 
 					<div>
