--- a/equipe.html
+++ b/equipe.html
@@ -71,37 +71,32 @@
 				<div class="staff-team">
 					<div>
 						<h3>HARDTEKBRS</h3>
-						<div class="owner">Owner</div>
+						<div class="owner">Dono</div>
 						<img src="https://lh3.googleusercontent.com/9r8aOat2c-gUQpPqAPmoysr4ZMUjuO00WbF2d2xXcOJv--85FONrgSKvmtoRYr5OCwMl6M8fkS6DcDVJLM04Eg=s400">
 					</div>
 
-					<div>
-						<h3>Bae4lyfe</h3>
-						<div class="owner">Owner</div>
-						<img src="img/bae4lyfe.png">
-					</div>
 
 					<div>
-						<h3>TheSlimyBro</h3>
-						<div class="manager">Manager</div>
+						<h3>Em análise</h3>
+						<div class="manager">Helper</div>
 						<img src="img/theslimybro.png">
 					</div>
 
 					<div>
-						<h3>Ryjay</h3>
-						<div class="admin">Admin</div>
+						<h3>Em análise</h3>
+						<div class="admin">Moderador</div>
 						<img src="img/ryjay.png">
 					</div>
 
 					<div>
-						<h3>LeanAndRekt</h3>
-						<div class="admin">Admin</div>
+						<h3>Em análise</h3>
+						<div class="admin">Moderador</div>
 						<img src="img/leanandrekt.png">
 					</div>
 
 					<div>
-						<h3>LeanAndRekt</h3>
-						<div class="admin">Admin</div>
+						<h3>Em análise</h3>
+						<div class="admin">Moderador</div>
 						<img src="img/leanandrekt.png">
 					</div>
 				</div>
