--- a/equipe.html
+++ b/equipe.html
@@ -78,25 +78,25 @@
 
 					<div>
 						<h3>Em análise</h3>
-						<div class="manager">Helper</div>
+						<div class="manager">Moderador</div>
 						<img src="img/theslimybro.png">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
-						<div class="admin">Moderador</div>
+						<div class="admin">Ajudante</div>
 						<img src="img/ryjay.png">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
-						<div class="admin">Moderador</div>
+						<div class="admin">Builder</div>
 						<img src="img/leanandrekt.png">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
-						<div class="admin">Moderador</div>
+						<div class="admin">Anunciante</div>
 						<img src="img/leanandrekt.png">
 					</div>
 				</div>
