--- a/equipe.html
+++ b/equipe.html
@@ -4,7 +4,7 @@
 	<meta name="description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
 	<meta name="keywords" content="MegaCraft, MegaCraft.com.br, Minecraft Server, Minecraft, Game, Fun, Play, Info, Website, Oficial">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="Mega Craft - Site Oficial">
+	<meta property="og:title" content="Mega Craft - Equipe">
 	<meta property="og:site_name" content="Mega Craft">
 	<meta property="og:description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
 	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
@@ -39,7 +39,7 @@
 			<div class="about-staff">
 				<div class="abt-epr">
 					<h1 class="fade">Nossa Equipe</h1>
-					<p>A equipe do MegaCraft é profissional e pronta para lhe dar a melhor experiência em nosso servidor. O dono é HARDTEKBRS (TEKCRAFT); toda a equipe se dedicam a oferecer a você o melhor tempo possível no servidor. O proprietário trabalha em estreita colaboração com o resto da equipe de funcionários. Você vai nos ver online e pode entrar com o IP "jogar.megacraft.com.br".</p>
+					<p>A equipe do MegaCraft é profissional e pronta para lhe dar a melhor experiência em nosso servidor. O dono é HARDTEKBRS (TEKCRAFT). Toda a equipe se dedica a oferecer a você o melhor tempo possível no servidor. O proprietário trabalha em estreita colaboração com o resto da equipe de funcionários. Você vai nos ver online e pode entrar com o IP "jogar.megacraft.com.br".</p>
 				</div>
 				<div class="prev-epr">
 					<h2>Nossas Habilidades</h2>
