--- a/equipe.html
+++ b/equipe.html
@@ -39,7 +39,7 @@
 			<div class="about-staff">
 				<div class="abt-epr">
 					<h1 class="fade">Nossa Equipe</h1>
-					<p>A equipe do MegaCraft é profissional e pronta para lhe dar a melhor experiência em nosso servidor. O dono é HARDTEKBRS (TEKCRAFT). Toda a equipe se dedica a oferecer a você o melhor tempo possível no servidor. O proprietário trabalha em estreita colaboração com o resto da equipe de funcionários. Você vai nos ver online e pode entrar com o IP "jogar.megacraft.com.br".</p>
+					<p>A equipe do MegaCraft é profissional e pronta para lhe dar a melhor experiência em nosso servidor. O dono é HARDTEKBRS (TEKCRAFT). Toda a equipe se dedica constantemente a oferecer a você o melhor tempo possível no servidor. O proprietário trabalha em estreita colaboração com o resto da equipe de funcionários. Você vai nos ver online e pode entrar com o IP "jogar.megacraft.com.br".</p>
 				</div>
 				<div class="prev-epr">
 					<h2>Nossas Habilidades</h2>
