--- a/equipe.html
+++ b/equipe.html
@@ -72,7 +72,7 @@
 					<div>
 						<h3>HARDTEKBRS</h3>
 						<div class="owner">Dono</div>
-						<img src="https://lh3.googleusercontent.com/9r8aOat2c-gUQpPqAPmoysr4ZMUjuO00WbF2d2xXcOJv--85FONrgSKvmtoRYr5OCwMl6M8fkS6DcDVJLM04Eg=s400">
+						<img src="https://i.pinimg.com/originals/5c/05/61/5c05615248a7a9f1e8567d992b37174f.png">
 					</div>
 
 
