--- a/equipe.html
+++ b/equipe.html
@@ -79,25 +79,25 @@
 					<div>
 						<h3>Em análise</h3>
 						<div class="manager">Moderador</div>
-						<img src="img/theslimybro.png">
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="admin">Ajudante</div>
-						<img src="img/ryjay.png">
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="admin">Builder</div>
-						<img src="img/leanandrekt.png">
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
 						<div class="admin">Anunciante</div>
-						<img src="img/leanandrekt.png">
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 				</div>
 			</div>
