--- a/equipe.html
+++ b/equipe.html
@@ -70,7 +70,8 @@
 				<h2>Nosso Time</h2>
 				<div class="staff-team">
 					<div>
-						<h3>HARDTEKBRS</h3><br />(TEKCRAFT)						<div class="owner">Dono</div>
+						<h3>HARDTEKBRS</h3>
+						<div class="owner">Dono</div>
 						<img src="https://i.pinimg.com/originals/5c/05/61/5c05615248a7a9f1e8567d992b37174f.png">
 					</div>
 
