--- a/equipe.html
+++ b/equipe.html
@@ -25,12 +25,11 @@
 					<!-- Make sure to name it 'logo.png'! -->
 					<a href="/"><img src="img/logo.png" alt="MyServer logo"></a>
 				</div>
-
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
+					<li><a href="equipe.html">Equipe</a></li>
 					<li><a href="https://discord.megacraft.com.br" target="_blank">Discord</a></li>
 					<li><a href="https://loja.megacraft.com.br" target="_blank">Loja</a></li>
-					<li><a href="equipe.html">Staff</a></li>
 				</ul>
 			</div>
 		</header>
