--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 				</div>
 			</div>
 		</div>
-						<!-- hitwebcounter Code START -->
-<p>Contador de visitas <a href="https://www.hitwebcounter.com" target="_blank">
+<br /><br />
+<p style="text-align:center">Contador de visitas <a href="https://www.hitwebcounter.com" target="_blank">
 <img src="https://hitwebcounter.com/counter/counter.php?page=7666647&style=0007&nbdigits=7&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a></p>
 		<footer>
 			<p>Copyright &copy; MegaCraft 2020</p>
