--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			</div>
 		</div>
 <br /><br />
-<p style="text-align:center">Contador de visitas <a href="https://www.hitwebcounter.com" target="_blank">
+<p style="text-align:center"><small>Contador de visitas</small> <a href="https://www.hitwebcounter.com" target="_blank">
 <img src="https://hitwebcounter.com/counter/counter.php?page=7666647&style=0007&nbdigits=7&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a></p>
 		<footer>
 			<p>Copyright &copy; MegaCraft 2020</p>
