--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 			</div>
 		</div>
 		<div class="vote-section">
-			<h2 id="vote-section">Vote em nós</h2>
-			<p>Por favor, considere votar no nosso Servidor usando os links abaixo! Isso nos ajuda enormemente!</p>
+			<h2 id="vote-section">Vote no servidor</h2>
+			<p>Por favor, considere votar no nosso Servidor usando os links abaixo! Isso nos ajuda grandemente!</p>
 			<div class="vote-container">
 				<div class="vote">
 					<h2>MinecraftServers.net</h2>
