--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <p style="text-align:center"><small>Contador de visitas</small> <a href="https://www.hitwebcounter.com" target="_blank">
 <img src="https://hitwebcounter.com/counter/counter.php?page=7666647&style=0007&nbdigits=7&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a></p>
 		<footer>
-			<p>Copyright &copy; MegaCraft 2020</p>
+			<p>Copyright &copy; 2020 MegaCraft</p>
 			<!-- Remove this part below if you want! -->
 			<p style="padding-right: 30px;">Desenvolvido por <a href="https://megacraft.com.br" >MegaCraft</a></p>
 		</footer>
