--- a/equipe.html
+++ b/equipe.html
@@ -28,6 +28,7 @@
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
 					<li><a href="equipe.html">Equipe</a></li>
+					<li><a href="http://suporte.my-board.org/" target="_blank">Suporte</a></li>
 					<li><a href="https://discord.megacraft.com.br" target="_blank">Discord</a></li>
 					<li><a href="https://loja.megacraft.com.br" target="_blank">Loja</a></li>
 				</ul>
