--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
 <img src="https://hitwebcounter.com/counter/counter.php?page=7666647&style=0007&nbdigits=7&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a></p>
 <br /><br />
 <p style="text-align:center">
-	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="https://images.vexels.com/media/users/3/137253/isolated/preview/90dd9f12fdd1eefb8c8976903944c026-logotipo-do---cone-do-facebook-by-vexels.png" hidth="30px" height="30px"></a>
-	<a href="https://instagram.com/MegaCraftBR" target="_blank"><img src="https://images.vexels.com/media/users/3/137380/isolated/preview/1b2ca367caa7eff8b45c09ec09b44c16-logotipo-do---cone-do-instagram-by-vexels.png" hidth="30px" height="30px"></a>
-	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="https://images.vexels.com/media/users/3/137419/isolated/preview/b1a3fab214230557053ed1c4bf17b46c-logotipo-do---cone-do-twitter-by-vexels.png" hidth="30px" height="30px"></a>
+	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="30px" height="30px"></a>
+	<a href="https://instagram.com/MegaCraftBR" target="_blank"><img src="img/instagram.png" hidth="30px" height="30px"></a>
+	<a href="https://discord.megacraft.com.br" target="_blank"><img src="img/discord.png hidth="30px" height="30px"></a>
+	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="30px" height="30px"></a>
 		</p>		
 		<footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
