--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 <img src="https://hitwebcounter.com/counter/counter.php?page=7666647&style=0007&nbdigits=7&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a></p>
 <br /><br />
 <p style="text-align:center">
-	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="30px" height="30px"></a>
-	<a href="https://instagram.com/MegaCraftBR" target="_blank"><img src="img/instagram.png" hidth="30px" height="30px"></a>
-	<a href="https://discord.megacraft.com.br" target="_blank"><img src="img/discord.png hidth="30px" height="30px"></a>
-	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="30px" height="30px"></a>
+	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="35px" height="35px" alt="Facebook MegaCraft"></a>
+	<a href="https://instagram.com/MegaCraftBR" target="_blank"><img src="img/instagram.png" hidth="35px" height="35px" alt="Instagram MegaCraft"></a>
+	<a href="https://discord.megacraft.com.br" target="_blank"><img src="img/discord.png hidth="35px" height="35px" alt="Discord MegaCraft"></a>
+	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="35px" height="35px" alt="Twitter MegaCraft"></a>
 		</p>		
 		<footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
