--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		<footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
 			<!-- Remove this part below if you want! -->
-			<p style="padding-right: 30px;">Desenvolvido por <a href="https://megacraft.com.br" >MegaCraft</a></p>
+			<p style="padding-right: 30px;">Desenvolvido por <a href="https://youtube.com/HARDTEK" target="_blank">TEKCraft</a></p>
 		</footer>
 	</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
