--- a/equipe.html
+++ b/equipe.html
@@ -83,9 +83,9 @@
 					</div>
 
 					<div>
-						<h3>Em análise</h3>
-						<div class="admin">Ajudante</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<h3>PORKALYPSE</h3>
+						<div class="admin">Helper</div>
+						<img src="img/pork.png">
 					</div>
 
 					<div>
