--- a/equipe.html
+++ b/equipe.html
@@ -72,7 +72,7 @@
 					<div>
 						<h3>HARDTEKBRS (TEK)</h3>
 						<div class="owner">Dono</div>
-						<img src="https://i.pinimg.com/originals/5c/05/61/5c05615248a7a9f1e8567d992b37174f.png">
+						<img src="https://i.pinimg.com/originals/5c/05/61/5c05615248a7a9f1e8567d992b37174f.png"  width="200px" height="400px">
 					</div>
 
 
@@ -85,7 +85,7 @@
 					<div>
 						<h3>PORKALYPSE</h3>
 						<div class="admin">Helper</div>
-						<img src="img/pork.png">
+						<img src="img/pork.png" width="200px" height="400px">
 					</div>
 
 					<div>
