--- a/equipe.html
+++ b/equipe.html
@@ -79,7 +79,7 @@
 					<div>
 						<h3>Em análise</h3>
 						<div class="manager">Moderador</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="img/milescraft.png" width="200px" height="400px">
 					</div>
 
 					<div>
