--- a/equipe.html
+++ b/equipe.html
@@ -77,7 +77,7 @@
 
 
 					<div>
-						<h3>Em análise</h3>
+						<h3>MILESCRAFT</h3>
 						<div class="manager">Moderador</div>
 						<img src="img/milescraft.png" width="200px" height="400px">
 					</div>
