--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script src="https://leonardosnt.github.io/mc-player-counter/dist/mc-player-counter.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/gh/leonardosnt/mc-player-counter@1.1.1/dist/mc-player-counter.min.js"></script>
 	<link rel="shortcut icon" href="favicon.ico" />
+	<script data-ad-client="ca-pub-3723447797304917" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 	<div class="container">
