--- a/equipe.html
+++ b/equipe.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<link rel="stylesheet" type="text/css" href="css/staff.css">
 	<link rel="shortcut icon" href="favicon.ico" />
+	<script data-ad-client="ca-pub-3723447797304917" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 	<div class="container">
