--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<li><a href="https://discord.megacraft.com.br" target="_blank">Discord</a></li>
 				</ul>
 		</div>
-			<h1 class="animate">Bem vindo ao MegaCraft Server!</h1>
+			<h1 class="animate">Bem vindos ao MegaCraft Server!</h1>
 			<div class="playercount">
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
