--- a/regras.html
+++ b/regras.html
@@ -21,9 +21,22 @@
 </head>
 <body>
 	<div class="container">
-
+		<header>
+			<div class="header">
+				<div class="logo">
+					<!-- In the img folder, upload your logo. -->
+					<!-- Make sure to name it 'logo.png'! -->
+					<a href="/"><img src="img/logo.png" alt="MyServer logo"></a>
+				</div>
+				<ul class="nav">
+					<li><a href="/">Home</a></li>
+					<li><a href="equipe.html">Equipe</a></li>
+					<li><a href="https://loja.megacraft.com.br" target="_blank">Loja</a></li>
+					<li><a href="http://suporte.my-board.org/" target="_blank">Suporte</a></li>
+				</ul>
+			</div>
+		</header>
 		<div class="main-content">
-
 <h2 class="section-heading">Regras</h2><br /><br />
 <p> <span class="regras">
 <ol style="font-size: 14px;">
@@ -42,12 +55,6 @@
 <li>Não fique pedindo fly ou outras permissões não cabíveis a você para os staffs.</li>
 <li>Proibido colocar placas de Venda/Compra com a intenção de Roubar/Enganar players colocando pontos, vírgulas ou o ID errado.</li>
 <li>Não divulgue outros servidores, dado o primeiro e segundo avisos, logo baniremos.</li>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
-<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5564571284457962" data-ad-slot="5772916418" data-ad-format="auto"></ins>
-<script>
-	(adsbygoogle = window.adsbygoogle || []).push({});
-	</script>
 <li>Não use um nick que contenha Números de Telefone/Celular ou Ips/Senhas.</li>
 <li>Quando tirar print, nunca Edite/Corte o seu print. Caso tenha falsificação no print ou no seu vídeo, o mesmo não valerá como prova e serás punido.</li>
 <li>Não se passe por outros jogadores usando nicks parecidos. <em><small>Ex: Verdadeiro - Guarana_BR; Falso - Guarana_RB.</small></em></li>
