--- a/regras.html
+++ b/regras.html
@@ -37,7 +37,11 @@
 			</div>
 		</header>
 		<div class="main-content">
-<h2 class="section-heading">Regras</h2><br /><br />
+			<div class="about-staff">
+				<div class="abt-epr">
+					<h1 class="fade">Regas</h1>
+					<p>Para que o servidor tenha uma boa qualidade, precisamos respeitar as regras, por favor, leia atentamente!</p>
+				</div><br /><br />
 <p> <span class="regras">
 <ol style="font-size: 14px;">
 <li>Respeito a todos, nunca ofenda a ninguém.</li>
