--- a/regras.html
+++ b/regras.html
@@ -50,7 +50,7 @@
 <li>Não arranje tumultos no chat, discutindo com Players/Staffs.</li>
 <li>Não é permitido o uso de skins inadequadas.</li>
 <li>Respeite os novos jogadores, todos possuem os mesmos direitos.</li>
-<li>Não abuse de bugs. Qualquer bug informe a Staff e terá 50k-10kk de coins como recompensa.</li>
+<li>Não abuse de bugs. Qualquer bug informe a Staff e terá 20k de money como recompensa.</li>
 <li>Não forneça seus dados a ninguém.</li>
 <li>O uso de qualquer modificação que forneça algum tipo de vantagem em jogo para os jogadores não é permitida, assim como modificações que alterem a forma como o jogo envia informações para o servidor. Exemplo de mods permitidos: OptiFine, Minimaps*, Shaders. <a href="https://beuteugeu.freshdesk.com/support/solutions/articles/17000054360-mods-n%C3%A3o-permitidos" target="_blank">Mais informações aqui.</a></li>
 <li>Não faça construções/pixel arts impróprias.</li>
