--- a/regras.html
+++ b/regras.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-	<title>Mega Craft - Site Oficial</title>
+	<title>Mega Craft - Regras</title>
 	<meta name="description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
 	<meta name="keywords" content="MegaCraft, MegaCraft.com.br, Minecraft Server, Minecraft, Game, Fun, Play, Info, Website, Oficial">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="Mega Craft - Site Oficial">
+	<meta property="og:title" content="Mega Craft - Regras">
 	<meta property="og:site_name" content="Mega Craft">
 	<meta property="og:description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
 	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
@@ -13,9 +13,7 @@
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link rel="stylesheet" href="css/stylesheet.css">
-	<link rel="stylesheet" href="css/home.css">
-	<script src="https://leonardosnt.github.io/mc-player-counter/dist/mc-player-counter.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/gh/leonardosnt/mc-player-counter@1.1.1/dist/mc-player-counter.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/staff.css">
 	<link rel="shortcut icon" href="favicon.ico" />
 	<script data-ad-client="ca-pub-3723447797304917" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
@@ -52,7 +50,7 @@
 <li>Respeite os novos jogadores, todos possuem os mesmos direitos.</li>
 <li>Não abuse de bugs. Qualquer bug informe a Staff e terá 20k de money como recompensa.</li>
 <li>Não forneça seus dados a ninguém.</li>
-<li>O uso de qualquer modificação que forneça algum tipo de vantagem em jogo para os jogadores não é permitida, assim como modificações que alterem a forma como o jogo envia informações para o servidor. Exemplo de mods permitidos: OptiFine, Minimaps*, Shaders. <a href="https://beuteugeu.freshdesk.com/support/solutions/articles/17000054360-mods-n%C3%A3o-permitidos" target="_blank">Mais informações aqui.</a></li>
+<li>O uso de qualquer modificação que forneça algum tipo de vantagem em jogo para os jogadores não é permitida, assim como modificações que alterem a forma como o jogo envia informações para o servidor. Exemplo de mods permitidos: OptiFine, Minimaps*, Shaders.</li>
 <li>Não faça construções/pixel arts impróprias.</li>
 <li>Proibido Vender/Negociar sua conta do jogo no servidor.</li>
 <li>Não crie contas FAKES, caso descobrirmos será banido.</li>
@@ -106,7 +104,7 @@
 	<a href="https://discord.megacraft.com.br" target="_blank"><img src="img/discord.png" hidth="35px" height="35px" alt="Discord MegaCraft"></a>
 	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="35px" height="35px" alt="Twitter MegaCraft"></a>
 		</p>	
-</div>
+		</div></div>
 		<footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
 			<!-- Remove this part below if you want! -->
