--- a/regras.html
+++ b/regras.html
@@ -38,8 +38,8 @@
 			<div class="about-staff">
 				<div class="abt-epr">
 					<h1 class="fade">Regas</h1>
-					<p>Para que o servidor tenha uma boa qualidade, precisamos respeitar as regras, por favor, leia atentamente!</p>
-				</div><br /><br />
+				</div></div><br /><br />
+<3>Para que o servidor tenha uma boa qualidade, precisamos respeitar as regras, por favor, leia atentamente!</3>		
 <p> <span class="regras">
 <ol style="font-size: 14px;">
 <li>Respeito a todos, nunca ofenda a ninguém.</li>
@@ -104,7 +104,7 @@
 	<a href="https://discord.megacraft.com.br" target="_blank"><img src="img/discord.png" hidth="35px" height="35px" alt="Discord MegaCraft"></a>
 	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="35px" height="35px" alt="Twitter MegaCraft"></a>
 		</p>	
-		</div></div>
+		</div>
 		<footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
 			<!-- Remove this part below if you want! -->
