--- a/regras.html
+++ b/regras.html
@@ -39,8 +39,9 @@
 				<div class="abt-epr">
 					<h1 class="fade">Regas</h1>
 				</div></div><br /><br />
-<3>Para que o servidor tenha uma boa qualidade, precisamos respeitar as regras, por favor, leia atentamente!</3>		
-<p> <span class="regras">
+<h3>Para que o servidor tenha uma boa qualidade, precisamos respeitar as regras, por favor, leia atentamente!</h3>	
+<p style="text-align:left">
+<span class="regras">
 <ol style="font-size: 14px;">
 <li>Respeito a todos, nunca ofenda a ninguém.</li>
 <li>Não fale palavras de baixo calão (Palavrões) no Chat.</li>
