--- a/regras.html
+++ b/regras.html
@@ -38,10 +38,9 @@
 			<div class="about-staff">
 				<div class="abt-epr">
 					<h1 class="fade">Regas</h1>
+					<h3>Para que o servidor tenha uma boa qualidade, precisamos respeitar as regras, por favor, leia atentamente!</h3>	
 				</div></div><br /><br />
-<h3>Para que o servidor tenha uma boa qualidade, precisamos respeitar as regras, por favor, leia atentamente!</h3>	
-<p style="text-align:left">
-<span class="regras">
+<div align="left">
 <ol style="font-size: 14px;">
 <li>Respeito a todos, nunca ofenda a ninguém.</li>
 <li>Não fale palavras de baixo calão (Palavrões) no Chat.</li>
@@ -87,14 +86,13 @@
 <li>Não é permitido definir terrenos a menos de 10 blocos de distância de outro terreno, salvo com permissão do dono do outro terreno. Também não é permitido colocar ou destruir blocos ao redor de terrenos de forma a prejudicar ou provocar o dono do terreno.</li>
 <li>Qualquer forma de atrapalhar ou impedir um membro da staff de atender um jogador não é permitida.</li>
 </ol>
-</span><br>
+</div><br>
 <br>
 </p>
 <br>
 <br>
 <br>
 <br>
-<span class="notification-bar alert alert-warning">Denuncie bugs e jogadores para o email <strong><a href="/cdn-cgi/l/email-protection#6c0f0302180d18032c0e09191809190b0919420f0301"><span class="__cf_email__" data-cfemail="52313d3c2633263d123037272637273537277c313d3f">[email&#160;protected]</span></a></strong>, fornecendo prints/vídeos.</span><br /><br />
 <span class="notification-bar alert alert-danger">Estas regras e observações podem mudar sem aviso prévio. Fique atento a elas!</span></p>
 <p><small><em>Escrito por TEKCRAFT. Última atualização em 22/09/20.</em></small></p>
 <br /><br />
