--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
 	<a href="https://instagram.com/MegaCraftBR" target="_blank"><img src="img/instagram.png" hidth="35px" height="35px" alt="Instagram MegaCraft"></a>
 	<a href="https://discord.megacraft.com.br" target="_blank"><img src="img/discord.png" hidth="35px" height="35px" alt="Discord MegaCraft"></a>
 	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="35px" height="35px" alt="Twitter MegaCraft"></a>
-		</p>	
-		
-		<footer>
+		</p>	<br /><br />
+			<h2 id="vote-section">Regras</h2>
+			<p>Por favor, é muito importante que você leia as regras do servidor, para que possamos sempre manter a qualidade em todos os sentidos! <a href="regras.html" target="_blank">Clique aqui</a>.</p>		
+		<br /><br /><footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
 			<!-- Remove this part below if you want! -->
 			<p style="padding-right: 30px;">Desenvolvido por <a href="https://youtube.com/HARDTEK" target="_blank">TEKCraft</a></p>
