--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="35px" height="35px" alt="Twitter MegaCraft"></a>
 		</p>	
 		<br /><br />
-		<p style="text-align:center"><h2 id="vote-section">Regras</h2>
+		<p style="text-align:center"><h2>Regras</h2>
 		<br /><br />Por favor, é muito importante que você leia as regras do servidor, para que possamos sempre manter a qualidade em todos os sentidos! <a href="regras.html" target="_blank">Clique aqui</a>.</p>		
 		<br /><br /><footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
