--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
 	<a href="https://discord.megacraft.com.br" target="_blank"><img src="img/discord.png" hidth="35px" height="35px" alt="Discord MegaCraft"></a>
 	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="35px" height="35px" alt="Twitter MegaCraft"></a>
 		</p>	
-		<br /><br />
-		<p style="text-align:center"><b>Regras do servidor!</b><br /><br />
+		<br /><br /><br />
+		<p style="text-align:center">
+		<span style="font-weight: bold;"font-size: 100%">Regras do servidor!</span><br /><br />
 		Por favor, é muito importante que você leia atentamente as regras do servidor<br />para para evitar qualquer tipo de banimento ou problemas futuros! <a href="regras.html" target="_blank">Clique aqui</a>.</p>		
 		<br /><br /><footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
