--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="35px" height="35px" alt="Twitter MegaCraft"></a>
 		</p>	
 		<br /><br /><br />
-		<p style="text-align:center">
+		<cite><p style="text-align:center">
 		<span style="font-weight: bold;"font-size: 100%">Regras do servidor!</span><br /><br />
 		Por favor, é muito importante que você leia atentamente as regras do servidor<br />para para evitar qualquer tipo de banimento ou problemas futuros! <a href="regras.html" target="_blank">Clique aqui</a>.</p>		
-		<br /><br /><footer>
+		</cite><br /><br /><footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
 			<!-- Remove this part below if you want! -->
 			<p style="padding-right: 30px;">Desenvolvido por <a href="https://youtube.com/HARDTEK" target="_blank">TEKCraft</a></p>
