--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
 	<a href="https://discord.megacraft.com.br" target="_blank"><img src="img/discord.png" hidth="35px" height="35px" alt="Discord MegaCraft"></a>
 	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="35px" height="35px" alt="Twitter MegaCraft"></a>
 		</p>	
-		<br /><br /><br />
+		<br /><br /><br /><br />
 		<p style="text-align:center">
-		<span style="font-size:150%;font-weight:bold">Regras do servidor!</span><br /><br />
+		<cite><span style="font-size:150%;font-weight:bold">Regras do servidor!</span><br /><br />
 		Por favor, é muito importante que você leia atentamente as regras do servidor<br />para para evitar qualquer tipo de banimento ou problemas futuros! <a href="regras.html" target="_blank">Clique aqui</a>.</p>		
-		<br /><br /><footer>
+		</cite><br /><br /><footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
 			<!-- Remove this part below if you want! -->
 			<p style="padding-right: 30px;">Desenvolvido por <a href="https://youtube.com/HARDTEK" target="_blank">TEKCraft</a></p>
