--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 		</p>	
 		<br /><br /><br /><br />
 		<p style="text-align:center">
-		<cite><span style="font-size:150%;font-weight:bold">Regras do servidor!</span><br /><br />
+		<q><span style="font-size:150%;font-weight:bold">Regras do servidor!</span><br /><br />
 		Por favor, é muito importante que você leia atentamente as regras do servidor<br />para para evitar qualquer tipo de banimento ou problemas futuros! <a href="regras.html" target="_blank">Clique aqui</a>.</p>		
-		</cite><br /><br /><footer>
+		</q><br /><br /><footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
 			<!-- Remove this part below if you want! -->
 			<p style="padding-right: 30px;">Desenvolvido por <a href="https://youtube.com/HARDTEK" target="_blank">TEKCraft</a></p>
