--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		<br /><br /><br /><br /><br />
 		<p style="text-align:center">
 		<cite><span style="font-size:150%;font-weight:bold">Regras do servidor!</span><br /><br />
-		Por favor, é muito importante que você leia atentamente as regras do servidor<br />para para evitar qualquer tipo de banimento ou problemas futuros! <a href="regras.html" target="_blank">Clique aqui</a>.</p>		
+		Por favor, é muito importante que você leia atentamente as regras do servidor<br />para para evitar qualquer tipo de banimento ou problemas futuros! <a href="regras.html" >Clique aqui</a>.</p>		
 		</cite><br /><br /><footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
 			<!-- Remove this part below if you want! -->
