--- a/apoiadores.html
+++ b/apoiadores.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-	<title>Mega Craft - Equipe</title>
+	<title>Mega Craft - Apoiadores</title>
 	<meta name="description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
 	<meta name="keywords" content="MegaCraft, MegaCraft.com.br, Minecraft Server, Minecraft, Game, Fun, Play, Info, Website, Oficial">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="Mega Craft - Equipe">
+	<meta property="og:title" content="Mega Craft - Apoiadores">
 	<meta property="og:site_name" content="Mega Craft">
 	<meta property="og:description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
 	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
@@ -42,50 +42,66 @@
 					<p>A equipe do MegaCraft é profissional e pronta para lhe dar a melhor experiência em nosso servidor. O dono é HARDTEKBRS (TEKCRAFT). Toda a equipe se dedica constantemente a oferecer a você o melhor tempo possível no servidor. O proprietário trabalha em estreita colaboração com o resto da equipe de funcionários. Você vai nos ver online e pode entrar com o IP "<b><span class="ip">jogar.megacraft.com.br</span></b>".</p>
 				</div>
 				<div class="prev-epr">
-					<h2>Nossas Habilidades</h2>
 
-					<div class="meter-container">
-						<p>Gerenciamento de equipe</p>
-						<div class="meter ma">
-							<div class="skills">78%</div>
-						</div>
-					</div>
-					<div class="meter-container">
-						<p>Desenvolvimento Java</p>
-						<div class="meter mb">
-							<div class="skills">96%</div>
-						</div>
-					</div>
-					<div class="meter-container">
-						<p>Desenvolvimento Web</p>
-						<div class="meter mc">
-							<div class="skills">100%</div>
-						</div>
-					</div>
 
 				</div>
 			</div>
 		</div>
 			<div class="staff">
-				<h2>Nosso Time</h2>
+				<h2>VIP ULTRA</h2>
 				<div class="staff-team">
 					<div>
-						<h3>HARDTEKBRS (TEK)</h3>
-						<div class="owner">Dono</div>
-						<img src="img/tek.png"  width="200px" height="400px">
+						<h3>Em análise</h3>
+						<div class="admin">Anunciante</div>
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 
 
 					<div>
-						<h3>MILESCRAFT</h3>
-						<div class="manager">Moderador</div>
-						<img src="img/milescraft.png" width="200px" height="400px">
+						<h3>Em análise</h3>
+						<div class="admin">Anunciante</div>
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 
 					<div>
-						<h3>PORKALYPSE</h3>
-						<div class="admin">Helper</div>
-						<img src="img/pork.png" width="200px" height="400px">
+						<h3>Em análise</h3>
+						<div class="admin">Anunciante</div>
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+					</div>
+
+					<div>
+						<h3>Em análise</h3>
+						<div class="admin">Anunciante</div>
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+					</div>
+
+					<div>
+						<h3>Em análise</h3>
+						<div class="admin">Anunciante</div>
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+					</div>
+				</div>
+			</div>
+			<div class="staff">
+				<h2>VIP SUPER</h2>
+				<div class="staff-team">
+					<div>
+						<h3>Em análise</h3>
+						<div class="admin">Anunciante</div>
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+					</div>
+
+
+					<div>
+						<h3>Em análise</h3>
+						<div class="admin">Anunciante</div>
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+					</div>
+
+					<div>
+						<h3>Em análise</h3>
+						<div class="admin">Anunciante</div>
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 
 					<div>
@@ -101,6 +117,41 @@
 					</div>
 				</div>
 			</div>
+			<div class="staff">
+				<h2VIP</h2>
+				<div class="staff-team">
+					<div>
+						<h3>Em análise</h3>
+						<div class="admin">Anunciante</div>
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+					</div>
+
+
+					<div>
+						<h3>Em análise</h3>
+						<div class="admin">Anunciante</div>
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+					</div>
+
+					<div>
+						<h3>Em análise</h3>
+						<div class="admin">Anunciante</div>
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+					</div>
+
+					<div>
+						<h3>Em análise</h3>
+						<div class="admin">Builder</div>
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+					</div>
+
+					<div>
+						<h3>Em análise</h3>
+						<div class="admin">Anunciante</div>
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+					</div>
+				</div>
+			</div>		
 		</div>
 
 		<footer>
