--- a/apoiadores.html
+++ b/apoiadores.html
@@ -38,8 +38,8 @@
 		<div class="main-content">
 			<div class="about-staff">
 				<div class="abt-epr">
-					<h1 class="fade">Nossa Equipe</h1>
-					<p>A equipe do MegaCraft é profissional e pronta para lhe dar a melhor experiência em nosso servidor. O dono é HARDTEKBRS (TEKCRAFT). Toda a equipe se dedica constantemente a oferecer a você o melhor tempo possível no servidor. O proprietário trabalha em estreita colaboração com o resto da equipe de funcionários. Você vai nos ver online e pode entrar com o IP "<b><span class="ip">jogar.megacraft.com.br</span></b>".</p>
+					<h1 class="fade">TOP Apoiadores</h1>
+					<p>As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos de host do servidor, hospedagem do site, plugins que estamos sempre comprado para melhorar a qualidade e diversão do servidor</br></br><b><u>O meu muito obrigado aos que estão contribuindo By TEK</u></b></b></b>".</p>
 				</div>
 				<div class="prev-epr">
 
