--- a/apoiadores.html
+++ b/apoiadores.html
@@ -118,7 +118,7 @@
 				</div>
 			</div>
 			<div class="staff">
-				<h2VIP</h2>
+				<h2>VIP</h2>
 				<div class="staff-team">
 					<div>
 						<h3>Em análise</h3>
