--- a/apoiadores.html
+++ b/apoiadores.html
@@ -38,8 +38,8 @@
 		<div class="main-content">
 			<div class="about-staff">
 				<div class="abt-epr">
-					<h1 class="fade">TOP Apoiadores</h1>
-					<p>As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos de host do servidor, hospedagem do site, plugins que estamos sempre comprado para melhorar a qualidade e diversão do servidor</br></br><b><u>O meu muito obrigado aos que estão contribuindo By TEK</u></b></b></b>".</p>
+					<h1 class="fade">Apoiadores</h1>
+					<p>As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos de host do servidor, hospedagem do site, dominio do site, plugins que estamos sempre comprado para melhorar a qualidade e diversão do servidor entre outros gastos que temos!</br></br><b><i>O meu muito obrigado aos que estão contribuindo.</br></br> Grande Abraço do TEK</i></b></b></b>".</p>
 				</div>
 				<div class="prev-epr">
 
