--- a/apoiadores.html
+++ b/apoiadores.html
@@ -51,33 +51,33 @@
 				<h2>VIP ULTRA</h2>
 				<div class="staff-team">
 					<div>
-						<h3>Em análise</h3>
-						<div class="admin">Anunciante</div>
+						<h3>RaHorack</h3>
+						<div class="owner">1º VIP ULTRA</div>
 						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 
 
 					<div>
-						<h3>Em análise</h3>
-						<div class="admin">Anunciante</div>
+						<h3>Ghost1611</h3>
+						<div class="owner">2º VIP ULTRA</div>
 						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
-						<div class="admin">Anunciante</div>
+						<div class="owner">Anunciante</div>
 						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
-						<div class="admin">Anunciante</div>
+						<div class="owner">Anunciante</div>
 						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
-						<div class="admin">Anunciante</div>
+						<div class="owner">Anunciante</div>
 						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 				</div>
@@ -87,32 +87,32 @@
 				<div class="staff-team">
 					<div>
 						<h3>Em análise</h3>
-						<div class="admin">Anunciante</div>
+						<div class="manager">Anunciante</div>
 						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 
 
 					<div>
 						<h3>Em análise</h3>
-						<div class="admin">Anunciante</div>
+						<div class="manager">Anunciante</div>
 						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
-						<div class="admin">Anunciante</div>
+						<div class="manager">Anunciante</div>
 						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
-						<div class="admin">Builder</div>
+						<div class="manager">Builder</div>
 						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 
 					<div>
 						<h3>Em análise</h3>
-						<div class="admin">Anunciante</div>
+						<div class="manager">Anunciante</div>
 						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 				</div>
