--- a/apoiadores.html
+++ b/apoiadores.html
@@ -58,7 +58,7 @@
 
 
 					<div>
-						<h3>Ghost1611</h3>
+						<h3>SrGananza</h3>
 						<div class="owner">2º VIP ULTRA</div>
 						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
