--- a/apoiadores.html
+++ b/apoiadores.html
@@ -157,7 +157,7 @@
 		<footer>
 			<p>Copyright &copy; MegaCraft 2020</p>
 			<!-- Remove this part below if you want! -->
-			<p style="padding-right: 30px;">Desenvolvido por <a href="https://megacraft.com.br" >MegaCraft</a></p>
+			<p style="padding-right: 30px;">Desenvolvido por <a href="https://youtube.com/HARDTEK" target="_blank">TEKCraft</a></p>
 		</footer>
 
 	</div>
