--- a/equipe.html
+++ b/equipe.html
@@ -79,7 +79,7 @@
 					<div>
 						<h3>ZackYTSwift</h3>
 						<div class="manager">Moderador</div>
-						<img src="http://www.minecraft-skin-viewer.net/3d.php?layers=true&aa=true&a=0&w=330&wt=10&abg=330&abd=40&ajg=340&ajd=20&ratio=13&format=png&login=local:b7e26857b972182e3e33c54bfef49471&headOnly=false&displayHairs=true&randomness=429" width="200px" height="400px">
+						<img src="img/zack.png"  width="200px" height="400px">
 					</div>
 
 					<div>
