--- a/index.html
+++ b/index.html
@@ -108,7 +108,12 @@
 		<p style="text-align:center">
 		<cite><span style="font-size:150%;font-weight:bold">Regras do servidor!</span><br /><br />
 		Por favor, é muito importante que você leia atentamente as regras do servidor<br />para para evitar qualquer tipo de banimento ou problemas futuros! <a href="regras.html" >Clique aqui</a>.</p>		
-		</cite><br /><br /><footer>
+		</cite><br /><br /><br /><br />
+	
+		<p style="text-align:center">
+		<cite><span style="font-size:150%;font-weight:bold">Apoiadores!</span><br /><br />
+		<div style="text-align: left">As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos de host do servidor, hospedagem do site, dominio do site, plugins que estamos sempre comprado para melhorar a qualidade e diversão do servidor entre outros gastos que temos!<img src="https://e7.pngegg.com/pngimages/584/1024/png-clipart-minecraft-minecraft.png" height="50%" width="50%" /></div><br /><br />	
+		<footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
 			<!-- Remove this part below if you want! -->
 			<p style="padding-right: 30px;">Desenvolvido por <a href="https://youtube.com/HARDTEK" target="_blank">TEKCraft</a></p>
