--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 	
 		<p style="text-align:center">
 		<cite><span style="font-size:150%;font-weight:bold">Apoiadores!</span><br /><br />
-		<div style="text-align: left">As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos de host do servidor, <a href="apoiadores.html">clique aqui</a> E conheça nossos primeiros!<img src="https://e7.pngegg.com/pngimages/584/1024/png-clipart-minecraft-minecraft.png" height="50%" width="50%" /></div><br /><br />	
+		<div style="text-align: left">As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos de host do servidor, <a href="apoiadores.html">clique aqui</a> E conheça nossos primeiros!<img src="https://www.pikpng.com/pngl/m/294-2943759_minecraft-iron-sword-png-png-3-clipart.png" height="20%" width="20%" /></div><br /><br />	
 		<footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
 			<!-- Remove this part below if you want! -->
