--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
 		<p style="text-align:center">
 		<cite><span style="font-size:150%;font-weight:bold">Regras do servidor!</span><br /><br />
 		Por favor, é muito importante que você leia atentamente as regras do servidor<br />para para evitar qualquer tipo de banimento ou problemas futuros! <a href="regras.html" >Clique aqui</a>.</p>		
-		</cite><br /><br /><br /><br />
-	
-		<p style="text-align:center">
-		<cite><span style="font-size:150%;font-weight:bold">Apoiadores!</span><br /><br />
-		<div style="text-align: left">As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos de host do servidor, <a href="apoiadores.html">clique aqui</a> E conheça nossos primeiros!<img src="https://www.pikpng.com/pngl/m/294-2943759_minecraft-iron-sword-png-png-3-clipart.png" height="20%" width="20%" /></div><br /><br />	
+		</cite>
+		<br /><br /><br /><br />
+		<span style="font-size:150%;font-weight:bold">Apoiadores!</span><br /><br />
+		<p><img style="float: left; margin: 0px 15px 15px 0px;" src="src="https://www.pikpng.com/pngl/m/294-2943759_minecraft-iron-sword-png-png-3-clipart.png" height="20%" width="20%"" width="100" />As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos de host do servidor, <a href="apoiadores.html">clique aqui</a> E conheça nossos primeiros!<br style="clear: both;" /></p>
+		<br /><br />	
 		<footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
 			<!-- Remove this part below if you want! -->
