--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		</cite>
 		<br /><br /><br /><br />
 		<span style="font-size:150%;font-weight:bold">Apoiadores!</span><br /><br />
-		<p><img style="float: left; margin: 0px 15px 15px 0px;" src="src="https://www.pikpng.com/pngl/m/294-2943759_minecraft-iron-sword-png-png-3-clipart.png" height="20%" width="20%"" width="100" />As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos de host do servidor, <a href="apoiadores.html">clique aqui</a> E conheça nossos primeiros!<br style="clear: both;" /></p>
+		<p><img style="float: left; margin: 0px 15px 15px 0px;" src="src="https://w7.pngwing.com/pngs/460/959/png-transparent-minecraft-thumbnail-entity-404-minecraft-skin-angle-art-bear.png" height="218px" width="620px"" width="100" />As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos de host do servidor, <a href="apoiadores.html">clique aqui</a> E conheça nossos primeiros!<br style="clear: both;" /></p>
 		<br /><br />	
 		<footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
