--- a/index.html
+++ b/index.html
@@ -110,9 +110,10 @@
 		Por favor, é muito importante que você leia atentamente as regras do servidor<br />para para evitar qualquer tipo de banimento ou problemas futuros! <a href="regras.html" >Clique aqui</a>.</p>		
 		</cite>
 		<br /><br /><br /><br />
+		<p style="text-align:center">
 		<span style="font-size:150%;font-weight:bold">Apoiadores!</span><br /><br />
-		<p><img style="float: left; margin: 0px 15px 15px 0px;" src="src="https://w7.pngwing.com/pngs/460/959/png-transparent-minecraft-thumbnail-entity-404-minecraft-skin-angle-art-bear.png" height="218px" width="620px"" width="100" />As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos de host do servidor, <a href="apoiadores.html">clique aqui</a> E conheça nossos primeiros!<br style="clear: both;" /></p>
-		<br /><br />	
+		<img style="float: left; margin: 0px 15px 15px 0px;" src="https://w7.pngwing.com/pngs/460/959/png-transparent-minecraft-thumbnail-entity-404-minecraft-skin-angle-art-bear.png" height="218px" width="620px"" width="100" />As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos de host do servidor, <a href="apoiadores.html">clique aqui</a> E conheça nossos primeiros!<br style="clear: both;" />
+		</p><br /><br />	
 		<footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
 			<!-- Remove this part below if you want! -->
