--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		<br /><br /><br /><br />
 		<p style="text-align:center">
 		<span style="font-size:150%;font-weight:bold">Apoiadores!</span><br /><br />
-		<img style="float: left; margin: 0px 15px 15px 0px;" src="https://i.pinimg.com/originals/ac/f2/03/acf2035028cddaaeabc94d67e1bda8a2.png" />As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos de host do servidor, <a href="apoiadores.html">clique aqui</a> E conheça nossos primeiros!<br style="clear: both;" />
+		<img style="float: left; margin: 0px 15px 15px 0px;" src="https://i.pinimg.com/originals/ac/f2/03/acf2035028cddaaeabc94d67e1bda8a2.png" />As contribuições são de grande importancia para manter o nosso servidor de pé, cada VIP comprado ajuda a pagar os custos de host do servidor, <a href="apoiadores.html">clique aqui</a> E conheça os apoiadores que fizeram a diferença para o servidor crescer!<br style="clear: both;" />
 		</p><br /><br />	
 		<footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
