--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		Por favor, é muito importante que você leia atentamente as regras do servidor<br />para para evitar qualquer tipo de banimento ou problemas futuros! <a href="regras.html" >Clique aqui</a>.</p>		
 		</cite>
 		<br /><br /><br /><br />
-		<p style="text-align:center; width: 600px;">
+		<p style="text-align:center;">
 		<span style="font-size:150%;font-weight:bold">Apoiadores!</span><br /><br />
 		<img style="float: left; margin: 0px 15px 15px 0px;" src="https://i.pinimg.com/originals/ac/f2/03/acf2035028cddaaeabc94d67e1bda8a2.png" width="159px" height="218px"/>As contribuições são de grande importancia para manter o nosso servidor de pé<br /> cada VIP comprado ajuda a pagar os custos de host do servidor<br /> <a href="apoiadores.html">clique aqui</a> E conheça os apoiadores que fizeram a diferença para o servidor crescer!
 		</p><br /><br />	
