--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
 		<span style="font-size:200%;font-weight:bold">Apoiadores!</span><br /><br />
 		As contribuições são de grande importancia para manter o nosso servidor de pé<br />
 		cada VIP comprado ajuda a pagar os custos de host do servidor<br />
-		conheça os apoiadores que fizeram a diferença para o servidor crescer <a href="apoiadores.html">clicando aqui</a>!<br />
+		conheça os apoiadores que fizeram a diferença para o servidor crescer <a href="apoiadores.html">clicando aqui</a><br />
+		<i><b>Seja um apoiador também, e ajude-nos a manter o servidor de pé <a href="https://loja.megacraft.com.br">clicando aqui</a>!</i></b>	
 		<img src="https://i.pinimg.com/originals/ac/f2/03/acf2035028cddaaeabc94d67e1bda8a2.png" width="250px" height="343px"/>	
 		</p><br /><br />
 <p style="text-align:center"><b>Redes Sociais: </b> 
