--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		<quote><small><b>IMPORTANTE</b><br />
 		O servidor MegaCraft não é de forma alguma afiliado à Mojang, AB. Nem deve ser considerada uma empresa endossada pela Mojang, AB.<br />
 		Quaisquer contribuições ou compras feitas do servidor vão para a Equipe de Desenvolvimento MegaCraft.<br />
-		Para mais informações, suporte ou histórico de compras, envie-nos um tíquete em http://suporte.my-board.org/<br />
+		Para mais informações, suporte ou histórico de compras, envie-nos um tíquete em <a href="http://suporte.my-board.org" target="_blank">http://suporte.my-board.org</a><br />
 		Minecraft ® / TM & © 2009-2020 Mojang / Notch<br /></small></quote>
 		<footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
